--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 	      <artifactId>springdoc-openapi-ui</artifactId>
 	      <version>1.6.14</version>
 	   </dependency>
+	   <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		    <version>2.7.5</version>
+		</dependency>
+	   
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
