--- a/src/main/resources/application-integrationtest.properties
+++ b/src/main/resources/application-integrationtest.properties
@@ -8,8 +8,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=false
 
-#spring.security.user.name=test
-#spring.security.user.password=test
+spring.security.user.name=test
+spring.security.user.password=test
 
 
 
